--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
+/*NON OTTIMIZZATA PER SCHERMI PICCOLI ONLY DESKTOP*/
+
 body{
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
+}
+
+nav, .nav-links{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    gap: 40px;
+    list-style: none;
+}
+
+a:hover{
+    border-bottom: 1px solid black;
 }
 
 .content{
