--- a/style.css
+++ b/style.css
@@ -82,11 +82,17 @@ a.btn-cv:hover{
     background-color: rgb(247, 232, 255);
 }
 
+.btn-container{
+    display: flex;
+    gap: 10px;
+}
+
+
 
 /*ABOUT ME*/
 
 .about-me{
-    height: 95vh;
+    height: fit-content;
     padding: 25px;
 }
 
@@ -98,8 +104,8 @@ a.btn-cv:hover{
 .card{
     margin-top: 5%;
     width: 400px;
-    height: 500px;
-    border: 2px solid black;
+    height: fit-content;
+    border: 4px solid black;
     border-radius: 25px;
 }
 
@@ -112,4 +118,46 @@ a.btn-cv:hover{
 .title-experience{
     margin-top: 10px;
     font-size: 33px;
+}
+
+
+.paragraph{
+    width: 70%;
+    margin-bottom: 0;
+}
+
+
+
+.education-card{
+    width: 70%;
+    border: 3px solid rgb(26, 26, 26);
+    background-color: rgb(173, 96, 255);
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 25px;
+}
+
+/*PORTFOLIO*/
+
+.portfolio{
+    height: 95vh;
+}
+
+
+/*CONTATTAMI*/
+
+.contattami{
+    height: 95vh;
+}
+
+
+/*FOOTER*/
+
+footer{
+    height: 20vh;
+}
+
+.footer-title{
+    padding: 70px 0;
+  text-align: center;
 }
